# runpba

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  run.sh
ns_app/: CMakeLists.txt
ns_app/app/: CMakeLists.txt  main_ns.c  test_app.c  test_app.h
ns_app/attestation/: CMakeLists.txt  attesation.c  attest_token_decode_symmetric.c  attestation.h
ns_app/log/: CMakeLists.txt
pacbti_service/: CMakeLists.txt  pacbti_service.c  pacbti_service.h  pacbti_service_manifest_list.yml  pacbti_service_req_mngr.c  tfm_pacbti_service.yaml
pacbti_service/interface/include/: tfm_pacbti_service.h  tfm_pacbti_service_def.h
pacbti_service/interface/src/: tfm_pacbti_service_api.c
scripts/: debugger.py  exploit_backward_edge.py  exploit_forward_edge.py  exploit_script.py  generate_breakpont_handlers.py
